# recreate

./: README.md  pyproject.toml
tests/: README.md  evil_index.json  expected_index.json  run_all_tests.sh  test_path_traversal.sh  test_recreate.sh
